# emailer

./: .dockerignore  Cargo.toml  Dockerfile  README.md
config/: base.yaml
migrations/: 20220316001615_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  sub_confirm.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletters.rs  sub_confirm.rs  subscriptions.rs
