[package]
name = "emailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "emailer"

[dependencies]
actix-web = "4.0.0"
actix-http = "3.0.0"
serde = { version = "1", features = ["derive"] }
config = "0.12"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
actix-rt = "2.7"
reqwest = "0.11"
tokio = "1"
