[package]
name = "emailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "emailer"

[dependencies]
actix-web = "4.0.0"
actix-http = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde-aux = "3.0.1" 
config = "0.12"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
tracing = { version = "0.1.32", features = ["log"] }
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-bunyan-formatter = "0.3.2"
tracing-actix-web = "0.5.1"
tracing-subscriber = { version = "0.3.9", features = ["registry", "env-filter"] }

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
actix-rt = "2.7"
reqwest = "0.11"
tokio = "1"
once_cell = "1.10.0"
